--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "husky": "^8.0.0",
         "laravel-vite-plugin": "^1.2.0",
+        "lint-staged": "^16.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
     }
