--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -1,7 +1,7 @@
 name: Auto-Merge Dependabot PRs
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - synchronize
@@ -15,6 +15,7 @@ jobs:
     if: |
       github.event.pull_request.user.login == 'dependabot[bot]' &&
       github.event.pull_request.state == 'open'
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
