--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "prepare": "husky install",
-        "format": "prettier --write ."
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
